1) Незначительные изменения 2) SearchMain - данный модуль должен быть итоговым в поиске глобального минимума

--- a/TODO
+++ b/TODO
@@ -30,5 +30,8 @@
              будет найдено наименьший фокальный отрезок из всех возможных.
              !!!Для начала можно сделать такой алгоритм для такого параметра как высота гарм.линзы.
 
+    // TODO: Изобразить градиентный рисунок, где каждый цвет имеет своё значение.
+            
+
 
 */
