1)Рефакторинг 2) Добавил новые модули из scipy.optimize для дальнейшей их проверки 3) Добавил модуль pytest и сами тесты в библиотеке scipy.optimize

--- a/TODO
+++ b/TODO
@@ -32,6 +32,7 @@
 
     // TODO: Изобразить градиентный рисунок, где каждый цвет имеет своё значение.
             
-
+    // Возможно в в OneDimension нужно искать минимум среди 
+        других начальных приближений и сравнивать эти результаты? 
 
 */
