1) Изменил логику основного алгоритма для нахождения фок. отрезка: 1.1) Заменил элемент в матрице переноса с 0 на -Ф 1.2) В DataSet: focus_0 > distances, в результате убрались отриц значения в списке фокусов и изменилось поведения графика зависимсоти 1.3) Ищменил принцип вывода графика: теперь через сохранение 2) Подрефакторил 3) Добавил некоторые модули, но не факт что нужные, просто попытки реализации 4) Обновил файлик TODO

--- a/TODO
+++ b/TODO
@@ -1,5 +1,48 @@
 // TODO: 
 
+Есть пример реализации градиентного спуска. Необходимо проверить:
+
+    1) Правильность самой функции !
+    2) Правильность learning_rate
+    3) Знаменатель градиентна
+    4) Корректность входных данных (data_set, размерность параметров отн друг друга)
+    5) Учесть возможный факт большого разброса фокусов в списке расчёта т.к у меня параксиальный случай
+        т.е нужны лучи,у которых угол м/у преломлением и оптической осью будет менее 5 градусов
+    6) Поменял значения: focus_0 > distance и отриц значения пропали
+    7) Также поменял элемент в матрице переноса вместо 0 поставил -факт
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 // FIXME: Исправить показатель преломления - это не для каждой линзы.
           // Это показатель преломления среды, а не линзы.
           // Поэтому его кол-во столько, сколько и d_i!
