Обновил TODO файл

--- a/TODO
+++ b/TODO
@@ -19,3 +19,4 @@
     2. Учитывать, что в результате алгоритма общий фокус не должен меняться (для этого добавил функцию find_common_focus)
     3. Добавить кеширование
     4. Решить вопрос с размерностями в loss_func и других местах (чтобы не домножать на 1e-2, 1e-6)
+    5. Написть GUI 
